# erp-FASTAPI_NEXT

./: .gitignore  LICENSE  README.md
backend/: alembic.ini  pyproject.toml  test.py
backend/src/: db_init.py  erp.db  initial_data.py  main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 635235f3fa44_initialize_database.py  650d9872156f_initial_tables_generation.py  a9140202ab75_initial_tables.py
backend/src/api/v1/: deps.py  main.py
backend/src/api/v1/routes/inventory/: items.py
backend/src/api/v1/routes/user/: auth.py
backend/src/core/: config.py  security.py
backend/src/crud/: auth.py  item.py  user.py
backend/src/db/: db.py  engine.py
backend/src/db/models/: __init__.py  department.py  employee.py  item.py  role.py  user.py  user_role.py
backend/src/schemas/: item.py  user.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/layout/: Sidebar.tsx  TopBar.tsx
frontend/src/core/: config.ts
frontend/src/features/auth/: LoginPage.tsx
frontend/src/lib/: api-client.ts
frontend/src/pages/: Dashboard.tsx
